2014-08-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (result [result-headers]): Handle osp
	result cases to output the vulnerability title correctly.

2014-08-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_report, authenticate_omp): Call
	openvas_server_sendf instead of openvas_server_send.

2014-08-05  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Removed target locator feature as this is not being fully
	supported by the backend anyway and a real solutions would
	now be based on different mechanisms.

	This patch takes care of the removal from the html part.

	* src/html/classic/omp.xsl (target_locator mode select): Removed.
	(html-create-target-form, html-edit-target-form): Removed handling of
	target_locator case.
	(new_target): Dropped parameter "target_sources" when calling
	html-create-target-form.

2014-08-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_omp.c (omp, authenticate_omp, new_task, edit_alert,
	new_target, save_config_omp, save_config_family_omp, get_report,
	get_report, import_port_list_omp): Use openvas_server_sendf
	instead of openvas_server_send, which is to be removed eventually.

2014-08-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/omp.xsl (result [result-body]): Handle special case
	of osp results with ovaldi definitions.

2014-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/help.xsl: Add note about password field being

2014-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/help.xsl: Add note about password field being
	optional when LDAP box is checked.

2014-07-31  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Make logging in GSAD thread-safe to solve crashing issues when many
	requests are received at the same time. A quick way to test for this is
	to use: nmap localhost -p 443 --script ssl-enum-ciphers.

	* src/gsad.c (logger_mutex): New variable.